--- a/Propmaster/appsettings.json
+++ b/Propmaster/appsettings.json
@@ -8,6 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "PropmasterContextConnection": "Server=(localdb)\\mssqllocaldb;Database=Propmaster;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "PropmasterContextConnection": "Server=(localdb)\\mssqllocaldb;Database=Propmaster;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "PropmasterModelContext": "Server=(localdb)\\mssqllocaldb;Database=PropmasterModelContext-946d01fb-6f47-4856-b22b-a3b1b6146e83;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
