--- a/Propmaster/Propmaster.csproj
+++ b/Propmaster/Propmaster.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <UserSecretsId>e0156448-a6d7-4c10-9cc8-bd662ef130b2</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
