--- a/Propmaster/appsettings.json
+++ b/Propmaster/appsettings.json
@@ -1,4 +1,6 @@
 {
+  "QueueConnectionString": "Endpoint=sb://propmasterservicebus.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=aF1R8/1spMeudzlPESeAZS8uRhjkFht261e+ITRBnVc=",
+  "QueueName": "propmasterbookingqueue",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
